[package]
name = "book-examples"
version = "0.1.0"
authors = ["creativefeather"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name = "hello-world"
path = "src/main.rs"

[[example]]
name = "variables"
path = "src/variables.rs"

[[example]]
name = "data-types"
path = "src/data-types.rs"

[[example]]
name = "functions"
path = "src/functions.rs"

[[example]]
name = "loops"
path = "src/loops.rs"

[[example]]
name = "ownership"
path = "src/ownership.rs"